2006-03-25  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	Implemented handling of currencyFormats that don't explicitely contain
	format for negative values.

2006-02-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* INSTALL, README: Documentation update.

2006-02-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* Makefile.am (gnu/localegen/PropertiesGenerator.java):
	Removed whitespace after this entry.

2006-02-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* Makefile.am (gnu/localegen/PropertiesGenerator.java): New entry.
   
2005-12-30  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #25570
	* src/gnu/classpath/tools/native2ascii/Native2ASCII.java(main):
	Fixed bugs in char to hex string conversion.

2005-08-02  Archit Shah  <archit.shah@alum.mit.edu>
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Centralize calls to
	System.exit and make handling of error conditions more uniform.

2005-07-05  Archit Shah  <archit.shah@alum.mit.edu>

	Rewrite rmic to use ASM library:
	* Makefile.am (ASM_JAR): New variable.
	(DISTCLEANFILES): Likewise.
	(AM_GCJFLAGS): Add -I for ASM_JAR.
	(lib_LTLIBRARIES): Add libasm.
	(libasm_la_LINK): New variable.
	(nodist_libasm_la_SOURCES): Likewise.
	(rmic_LDADD): Likewise.
	(rmic_SOURCES): Updated.
	* configure.ac (--with-asm): Removed; ASM is no longer optional.
	* src/gnu/classpath/tools/rmi/rmic/Compile_gcj.java,
	src/gnu/classpath/tools/rmi/rmic/Compile_jikes.java,
	src/gnu/classpath/tools/rmi/rmic/Compile_kjc.java,
	src/gnu/classpath/tools/rmi/rmic/Compiler.java,
	src/gnu/classpath/tools/rmi/rmic/CompilerProcess.java,
	src/gnu/classpath/tools/rmi/rmic/TabbedWriter.java: Removed.
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Rewrote.
	* src/gnu/classpath/tools/rmi/rmic/Variables.java: New file.

2005-06-27  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/classpath/tools/Util.java
	(Util): Really search in the default classpath if searching in the
	current directory fails.
